// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not trigger if no analytics system is given 1`] = `
<Helmet
  defer={false}
  encodeSpecialCharacters={true}
  prioritizeSeoTags={false}
/>
`;

exports[`should work for WebAnalytics plugin 1`] = `
<Helmet
  defer={false}
  encodeSpecialCharacters={true}
  onChangeClientState={[Function]}
  prioritizeSeoTags={false}
/>
`;
